# repro

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  flake.nix
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: test.yml
nix/: shell.nix
src/: main.cpp
